2011-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dumpers.m4: Add AMANDA_PROG_SUNTAR, --with-suntar=??
	* configure.in: Use AMANDA_PROG_SUNTAR.
	* perl/Amanda/Constants.pm.in: Define $Amanda::Constants::SUNTAR
	* application-src/amsuntar.pl: Use $Amanda::Constants::SUNTAR,
				       Add SUNTAR-PATH property.
	* man/xml-source/amsuntar.8.xml: Document SUNTAR-PATH property.

2011-03-17  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: unset SUN_PERSONALITY on startup.

2011-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/disk.pm: Use -l to check symlink existance.

2011-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: export quote host and disk name, import parse
	  quoted host and disk name.

2011-03-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtrmidx.c: Fix memory leak.

2011-03-04  Dustin J. Mitchell <dustin@zmanda.com>
        * server-src/amcheck.c: drop root privs during the server check, so
          that access() will test the dumpuser's perms, not root's perms

2011-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Jan Görig
	* server-src/amrestore.pl: Allow to go to next file with -p.

2011-01-31  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/amndmjob_main.c: Remove remove exit on eof thread.
	* ndmp-src/ndma_comm_session.c: add a g_debug message.

2011-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: parse old SUCCESS lines properly
	* perl/Amanda/DB/Catalog.pm: same
	* installcheck/Amanda_DB_Catalog.pl: test old SUCCESS lines

2011-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: fix reporting partial dump if only the
	  taper is partial.

2011-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/amndma_tape_simulator.c: Use full_read.
	* ndmp-src/ndma_tape.c: Use ndmchan_n_avail_record to guarantee space
	  for a record.